Fixing img pointer

--- a/project1/index.html
+++ b/project1/index.html
@@ -16,7 +16,7 @@
             <div class="row"><!-- Decided to nest the colums, I thought it would render more like original.-->
               <div class="col-md-5">
                 <div class="image-placement">
-                  <img class="img-responsive" src="images/mug.png" alt="Udacity Mug Logo">
+                  <img class="img-responsive" src="mug.png" alt="Udacity Mug Logo">
                 </div>
                 <div class="box-liner"><!--Most of my elements are within a div, I thought it would be better to manipulate the entire div instead of indiv. child elements.-->
                   <div>
