--- a/index.html
+++ b/index.html
@@ -11,4 +11,4 @@
 		r.parentNode.insertBefore(e, r)
 	}(window, document, 'script', 'ga'));
 	ga('create', 'UA-XXXXX-X');
-	ga('send', 'pageview');</script><script src="scripts/vendor.js"></script><script src="scripts/plugins.js"></script><script src="scripts/main.js"></script></body></html>
+	ga('send', 'pageview');</script><script src="scripts/vendor.js"></script><script src="scripts/plugins.js"></script><script src="scripts/controllers.js"></script><script src="scripts/directives.js"></script><script src="scripts/services.js"></script><script src="scripts/filters.js"></script><!-- Commented out to check minification bug. --><!-- <script src="bundle.js"></script> --><!-- End of Webpack Bundle. --></body></html>
