--- a/home.html
+++ b/home.html
@@ -1,4 +1,4 @@
-<md-toolbar class="backgroundColorBlack text-center"><header-content></header-content><!-- <md-menu class="menuStlying" hide-gt-xs>
+<md-toolbar class="backgroundColorBlack text-center"><header-content></header-content><!-- TODO: Fix bug in production for menu. Until commented out. --><!-- <md-menu class="menuStlying" hide-gt-xs>
 		<md-button ng-click="$mdOpenMenu($event)" class="md-icon-button" aria-label="Open navigation menu">
 			<md-icon md-svg-icon="/images/icons/svg/three.svg"></md-icon>
 		</md-button>
